--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -106,6 +106,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -799,6 +800,7 @@ allow 2001:910:1400:107::2;
 allow 2001:ac8:21:57:0:1:f6ab:cb24;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1679,6 +1681,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1702,7 +1705,6 @@ allow 38.135.24.31;
 allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1940,7 +1942,6 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
-allow 89.32.41.150;
 allow 89.36.231.128;
 allow 89.37.95.34;
 allow 89.58.26.216;
