Update lists at 20250525-2101

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,7 +104,6 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 109.71.252.182;
 set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
-set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
@@ -155,6 +154,7 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.41.95.1;
 set_real_ip_from 154.41.95.2;
 set_real_ip_from 154.53.58.161;
+set_real_ip_from 157.66.25.92;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
@@ -996,7 +996,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1235,6 +1234,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1766,6 +1766,7 @@ set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.67.34.82;
 set_real_ip_from 45.80.158.167;
 set_real_ip_from 45.80.158.175;
+set_real_ip_from 45.80.158.180;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
@@ -1821,6 +1822,7 @@ set_real_ip_from 45.95.169.14;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1990,5 +1992,4 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
-set_real_ip_from 97.74.89.52;
 set_real_ip_from 98.128.173.33;
