Update lists at 20250527-1201

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -130,7 +130,6 @@ set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.98.11.62;
-set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.41;
@@ -547,7 +546,6 @@ set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
@@ -678,7 +676,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -691,6 +688,7 @@ set_real_ip_from 199.195.251.202;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
+set_real_ip_from 2001:0:d911:c0d9:30a2:2f9d:a41c:8d66;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
@@ -953,6 +951,7 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
@@ -985,6 +984,7 @@ set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
+set_real_ip_from 23.236.122.193;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8902::f03c:95ff:fe1e:6065;
@@ -996,6 +996,7 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1015,6 +1016,7 @@ set_real_ip_from 2600:3c07::f03c:95ff:fe1e:22e;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe1e:2a6;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cd1f::1;
@@ -1035,7 +1037,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1210,7 +1211,6 @@ set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
-set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
@@ -1239,7 +1239,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
@@ -1640,7 +1639,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
-set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
@@ -1653,10 +1651,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
-set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
-set_real_ip_from 2a12:a800:2:1:45:141:215:56;
-set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
@@ -1682,6 +1677,7 @@ set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.177.222;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1705,7 +1701,6 @@ set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
 set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1727,7 +1722,6 @@ set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.231;
 set_real_ip_from 45.138.16.239;
-set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
@@ -1743,10 +1737,7 @@ set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.21;
-set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
-set_real_ip_from 45.141.215.56;
-set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
@@ -1754,6 +1745,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.144.209.15;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.192.243.213;
@@ -1829,7 +1821,6 @@ set_real_ip_from 45.95.169.14;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1939,6 +1930,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1967,6 +1959,7 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
+set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
@@ -2001,3 +1994,4 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
+set_real_ip_from 97.74.89.52;
