--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -10,10 +10,10 @@ set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.208.86.5;
-set_real_ip_from 103.245.231.77;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
+set_real_ip_from 103.80.87.170;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
@@ -57,7 +57,6 @@ set_real_ip_from 107.189.14.106;
 set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
-set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
@@ -127,7 +126,6 @@ set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 138.68.144.236;
 set_real_ip_from 139.162.90.140;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -516,6 +514,7 @@ set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
+set_real_ip_from 185.247.226.175;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
@@ -626,7 +625,6 @@ set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
-set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
@@ -809,6 +807,7 @@ set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
+set_real_ip_from 204.194.29.4;
 set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
@@ -1101,7 +1100,6 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -1318,6 +1316,7 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
+set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1538,6 +1537,7 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:6c2:17:5ff::;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1577,7 +1577,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
-set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
@@ -1609,7 +1608,6 @@ set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::182;
-set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:23ae:4067:bed4:a129;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1719,7 +1717,6 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.161;
@@ -1847,7 +1844,6 @@ set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -2003,3 +1999,4 @@ set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 97.74.89.52;
+set_real_ip_from 98.128.173.33;
