Update lists at 20250528-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,10 +10,10 @@ allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.208.86.5;
+allow 103.245.231.77;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
-allow 103.80.87.170;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -71,7 +71,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -109,7 +108,6 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -278,7 +276,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -608,6 +605,13 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.189.100.194;
+allow 193.189.100.195;
+allow 193.189.100.196;
+allow 193.189.100.197;
+allow 193.189.100.198;
+allow 193.189.100.199;
+allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
@@ -686,6 +690,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 2001:1af8:4700:a114:6::1;
+allow 2001:1b40:5700:983c::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -793,7 +798,6 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -993,6 +997,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1055,7 +1060,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1534,7 +1538,6 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
-allow 2a0d:6c2:17:5ff::;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
@@ -1593,6 +1596,13 @@ allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
 allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
@@ -1725,7 +1735,6 @@ allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
-allow 45.139.50.202;
 allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
@@ -1904,6 +1913,7 @@ allow 80.85.246.128;
 allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
+allow 81.168.83.98;
 allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.211.1.212;
@@ -1995,4 +2005,5 @@ allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
+allow 97.74.89.52;
 allow 98.128.173.33;
