--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,5 @@
 deny 2001:1af8:4700:a114:6::1;
+deny 2001:1b40:5700:983c::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
@@ -105,7 +106,6 @@ deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -120,6 +120,7 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2407:1c00:6100:5640::;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
@@ -175,7 +176,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -653,7 +653,6 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:e300::23;
-deny 2a0d:6c2:17:5ff::;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
@@ -712,6 +711,13 @@ deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:ca80::1260:4bff:fea4:19b0;
 deny 2a0f:ca80::2e59:e5ff:fe49:3738;
 deny 2a0f:cdc6:500:11e3::2;
+deny 2a0f:df00:0:255::194;
+deny 2a0f:df00:0:255::195;
+deny 2a0f:df00:0:255::196;
+deny 2a0f:df00:0:255::197;
+deny 2a0f:df00:0:255::198;
+deny 2a0f:df00:0:255::199;
+deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
