--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -10,10 +10,10 @@ set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.208.86.5;
+set_real_ip_from 103.245.231.77;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
-set_real_ip_from 103.80.87.170;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
@@ -71,7 +71,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -109,7 +108,6 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 119.28.139.55;
@@ -278,7 +276,6 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.6;
-set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -608,6 +605,13 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.189.100.194;
+set_real_ip_from 193.189.100.195;
+set_real_ip_from 193.189.100.196;
+set_real_ip_from 193.189.100.197;
+set_real_ip_from 193.189.100.198;
+set_real_ip_from 193.189.100.199;
+set_real_ip_from 193.189.100.200;
 set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
@@ -686,6 +690,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b40:5700:983c::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -793,7 +798,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -993,6 +997,7 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1055,7 +1060,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1534,7 +1538,6 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:6c2:17:5ff::;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1593,6 +1596,13 @@ set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
 set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
+set_real_ip_from 2a0f:df00:0:255::194;
+set_real_ip_from 2a0f:df00:0:255::195;
+set_real_ip_from 2a0f:df00:0:255::196;
+set_real_ip_from 2a0f:df00:0:255::197;
+set_real_ip_from 2a0f:df00:0:255::198;
+set_real_ip_from 2a0f:df00:0:255::199;
+set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
@@ -1725,7 +1735,6 @@ set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
-set_real_ip_from 45.139.50.202;
 set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
@@ -1904,6 +1913,7 @@ set_real_ip_from 80.85.246.128;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
+set_real_ip_from 81.168.83.98;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.211.1.212;
@@ -1995,4 +2005,5 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
+set_real_ip_from 97.74.89.52;
 set_real_ip_from 98.128.173.33;
