--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -71,7 +71,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -278,7 +277,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -679,7 +677,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -956,6 +953,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -1000,6 +998,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1019,7 +1018,9 @@ allow 2600:3c07::f03c:95ff:fe1e:22e;
 allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
+allow 2602:f6f6:2:69ed::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cd1f::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1039,7 +1040,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1061,7 +1061,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1619,6 +1618,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::19eb:717b;
 allow 2a10:1fc0:10::28fc:90d4;
 allow 2a10:1fc0:10::2a17:5b54;
 allow 2a10:1fc0:10::2cf4:6ba2;
@@ -1634,16 +1634,21 @@ allow 2a10:1fc0:10::42d2:f78b;
 allow 2a10:1fc0:10::5138:4dfa;
 allow 2a10:1fc0:10::5719:261d;
 allow 2a10:1fc0:10::61d9:7617;
+allow 2a10:1fc0:10::61e2:c84d;
 allow 2a10:1fc0:10::627f:3c31;
 allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
 allow 2a10:1fc0:10::6c2e:469a;
+allow 2a10:1fc0:10::6d92:d6ab;
 allow 2a10:1fc0:10::6fde:4b8d;
 allow 2a10:1fc0:10::792f:38b4;
 allow 2a10:1fc0:10::895d:abf9;
+allow 2a10:1fc0:10::8a03:d023;
 allow 2a10:1fc0:10::8b78:d42e;
 allow 2a10:1fc0:10::8d4d:eca2;
 allow 2a10:1fc0:10::9a73:d4f2;
 allow 2a10:1fc0:10::9d80:c9f7;
+allow 2a10:1fc0:10::9e08:e765;
 allow 2a10:1fc0:10::a3a5:49da;
 allow 2a10:1fc0:10::a458:8b37;
 allow 2a10:1fc0:10::a63c:724c;
@@ -1749,6 +1754,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.177;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1882,6 +1888,7 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.249.49.183;
 allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
@@ -1976,6 +1983,7 @@ allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.239.55.11;
+allow 85.239.55.110;
 allow 85.239.55.112;
 allow 85.239.55.114;
 allow 85.239.55.123;
@@ -2043,10 +2051,13 @@ allow 91.219.236.91;
 allow 91.227.77.107;
 allow 91.227.77.108;
 allow 91.227.77.119;
+allow 91.227.77.125;
 allow 91.227.77.139;
 allow 91.227.77.158;
 allow 91.227.77.160;
+allow 91.227.77.181;
 allow 91.227.77.193;
+allow 91.227.77.200;
 allow 91.227.77.208;
 allow 91.227.77.209;
 allow 91.227.77.226;
@@ -2056,8 +2067,10 @@ allow 91.227.77.25;
 allow 91.227.77.31;
 allow 91.227.77.36;
 allow 91.227.77.44;
+allow 91.227.77.48;
 allow 91.227.77.51;
 allow 91.227.77.54;
+allow 91.227.77.62;
 allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
@@ -2093,4 +2106,5 @@ allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
+allow 97.74.89.52;
 allow 98.128.173.33;
