--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -121,6 +121,7 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2407:1c00:6100:5640::;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
@@ -133,7 +134,9 @@ deny 2600:3c07::f03c:95ff:fe1e:22e;
 deny 2600:3c0a::f03c:95ff:fe1e:2a6;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
+deny 2602:f6f6:2:69ed::1;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cd1f::1;
 deny 2602:f6f6:2:d31a::1;
@@ -153,7 +156,6 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -175,7 +177,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -732,6 +733,7 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
 deny 2a10:1fc0:10::28fc:90d4;
 deny 2a10:1fc0:10::2a17:5b54;
 deny 2a10:1fc0:10::2cf4:6ba2;
@@ -747,16 +749,21 @@ deny 2a10:1fc0:10::42d2:f78b;
 deny 2a10:1fc0:10::5138:4dfa;
 deny 2a10:1fc0:10::5719:261d;
 deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
 deny 2a10:1fc0:10::627f:3c31;
 deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
 deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
 deny 2a10:1fc0:10::6fde:4b8d;
 deny 2a10:1fc0:10::792f:38b4;
 deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
 deny 2a10:1fc0:10::8b78:d42e;
 deny 2a10:1fc0:10::8d4d:eca2;
 deny 2a10:1fc0:10::9a73:d4f2;
 deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
 deny 2a10:1fc0:10::a3a5:49da;
 deny 2a10:1fc0:10::a458:8b37;
 deny 2a10:1fc0:10::a63c:724c;
